K8/user.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      role: user-api
  template:
    metadata:
      labels:
        role: user-api
    spec:
      containers:
        - name: user-service
          image: robinalfengard/user-servicev4:1.6
          ports:
            - containerPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      role: db
  template:
    metadata:
      labels:
        role: db
    spec:
      containers:
        - name: mysql
          image: 'mysql:8.3.0'
          ports:
            - containerPort: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-db
spec:
  selector:
    matchLabels:
      app: message-db
  template:
    metadata:
      labels:
        app: message-db
    spec:
      containers:
        - name: message-db
          image: mongo:latest
          ports:
            - containerPort: 27017
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-service
spec:
  selector:
    matchLabels:
      app: message-service
  template:
    metadata:
      labels:
        app: message-service
    spec:
      containers:
        - name: message-service
          image: ghcr.io/chatgut/micropostservice:main
          ports:
            - containerPort: 8000
      restartPolicy: Always

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
spec:
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management
          ports:
            - containerPort: 5672
            - containerPort: 15672

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      role: frontend
  template:
    metadata:
      labels:
        role: frontend
    spec:
      containers:
        - name: frontend
          image: 'ghcr.io/chatgut/frontend:0.0.3'
          ports:
            - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: image-service
  template:
    metadata:
      labels:
        app: image-service
    spec:
      containers:
        - name: image-service
          image: ghcr.io/chatgut/imageservicebov:sha-925024f
          ports:
            - containerPort: 8001
      restartPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: image-database
  template:
    metadata:
      labels:
        app: image-database
    spec:
      containers:
        - name: image-database
          image: mysql:8.3.0
          ports:
            - containerPort: 3306
